--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-4">
-                    Email-id<br>
+                    <b>Email-id</b><br>
                     xyz@gmail.com
                 </div>
                 <div class="col-lg-4">
-                    Address<br>
+                    <b>Address</b><br>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam dignissimos porro repellendus recusandae quia voluptatum distinctio sapiente libero harum nisi expedita, incidunt rem excepturi, ipsa similique placeat sit nihil velit.
                 </div>
                 <div class="col-lg-4">
-                    Contact no<br>
+                    <b>Contact no</b><br>
                     9999999999
                 </div>
             </div>
