--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <nav class="navbar navbar-dark bg-dark shadow-lg nav-border fixed-top" style="width: 100%;">
         <div class="container-fluid d-flex justify-content-center">
         <a class="navbar-brand" href="#">
-            <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-top">
-            LOGO
+            <img src="crown.jpg" alt="" width="50" height="50" class="d-inline-block align-top">
         </a>
         </div>
     </nav>
     <section>
-        <div class="container-fluid div-image pt-5">
+        <div class="container-fluid pt-5" style="background-color: #132440;">
             <div class="col-lg-12 text-center" style="padding: 30px 0px 30px 0px;">
                 <div style="font-size: 30px;color: cornsilk;">
                     <div>Club for</div>
@@ -34,27 +33,27 @@
             </div>
         </div>
     </section>
-    <section style="background-color: coral;" class="pb-3">
+    <section style="background-color: #ffffff;" class="pb-3">
         <div class="container-fluid" style="padding-top: 10px;">
             <div class="row flex-md-row-reverse">
                 <div class="col-lg-4">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="1.jpg" class="d-block" alt="..." height="500px" width="100%">
+                            <img src="1.jpg" class="d-block" alt="..." height="300px" width="100%">
                           </div>
                           <div class="carousel-item">
-                            <img src="2.jpg" class="d-block" alt="..." height="500px" width="100%">
+                            <img src="2.jpg" class="d-block" alt="..." height="300px" width="100%">
                           </div>
                           <div class="carousel-item">
-                            <img src="3.jpg" class="d-block" alt="..." height="500px" width="100%">
+                            <img src="3.jpg" class="d-block" alt="..." height="300px" width="100%">
                           </div>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-8">
                     <div><p style="font-size: 30px;" class="text-center">About club</p></div>
-                    <img src="1.jpg" width="150rem" height="150rem" class="float-right">
+                    <img src="crown.jpg" width="150rem" height="150rem" class="float-right">
                     <p class="align-left">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quibusdam nesciunt adipisci maiores explicabo enim odit. Rerum voluptatibus earum magni vero ab perferendis maiores illo, odio aut delectus inventore id.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores exercitationem similique animi adipisci minima quam tenetur ducimus impedit, aliquam a maiores harum perspiciatis molestiae inventore ratione quod unde dolores doloremque!
@@ -69,13 +68,13 @@
             </div>
         </div>
     </section>
-    <section style="background-color: lightgreen;" class="pt-4 pb-3">
+    <section style="background-color: #132440; color:white;" class="pt-4 pb-3">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-4 text-center">
-                    <div><p style="font-size: 30px;" class="text-center">Membership form</p></div>
+                    <div><p style="font-size: 30px;" class="text-center" >Membership form</p></div>
                     <div>
-                        <a href="">Membership</a>
+                        <button type="button" class="btn btn-light"><a href="#" style="text-decoration: none; color: #132440;">Membership</a></button>
                     </div>
                 </div>
                 <div class="col-lg-8 text-center">
